offline mode added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/photoDetailsFragments"
-        android:name="com.czech.paybacktask.ui.photoDetails.PhotoDetailsFragments"
+        android:name="com.czech.paybacktask.ui.photoDetails.PhotoDetailsFragment"
         android:label=""
         tools:layout="@layout/photo_details_fragments_fragment" >
         <argument
